--- a/src/modules/app/Layout.module.scss
+++ b/src/modules/app/Layout.module.scss
@@ -9,4 +9,12 @@
             width: 150px !important;
         }
     }
+
+    .link {
+        color: black;
+    }
+
+    .link:hover {
+        color: teal;
+    }
 }
