--- a/src/modules/app/index.css
+++ b/src/modules/app/index.css
@@ -12,3 +12,7 @@
     .ant-page-header-heading {
     display: none;
 }
+
+.ant-pro-layout .ant-pro-sider.ant-pro-sider-fixed {
+    background: white !important;
+}
