--- a/src/modules/home/views/Home.module.scss
+++ b/src/modules/home/views/Home.module.scss
@@ -2,4 +2,22 @@
     height: 50%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media screen and (min-width: 1024px) {
+    .container {
+        img {
+            width: 500px;
+        }
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .container {
+        img {
+            width: 50%;
+        }
+    }
 }
